Fix: fuzzy text option not visible in FS, cleaned up FS Options

--- a/src/stylus/faceted-search.styl
+++ b/src/stylus/faceted-search.styl
@@ -41,6 +41,25 @@
 		&:active
 			background darken(controlsButtonColor, 10%)
 
+	.options
+		input, label
+			vertical-align middle
+			cursor pointer
+		label
+			margin-left .5em
+
+		.align.middle
+			font-size small // is 0 for .row
+			line-height normal
+			padding-bottom 1em
+
+		h4
+			margin-bottom .5em
+		ul
+			margin-bottom 1em
+			&:last-child
+				margin-bottom 0
+
 	.controls
 		.facet
 			background white
